Update CSS class for best sporty hybrids

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 
 
-.nissanfrontier, .mk5, .storyofpagani,.r32img, .dodge, .dailycarimg{
+.nissanfrontier, .mk5, .storyofpagani,.r32img, .dodge, .dailycarimg .bestsportyhybrids{
   border: 3px solid;
    padding: 5px 8px; 
      padding: 0px; 
