Update CSS class names for styling adjustments

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   margin: auto;
 }
 
-.mk5{
+.mk5 .bestsportyhybrids{
   margin: auto;
   width: 40em;
 }
@@ -34,7 +34,7 @@ body {
 
 
 
-.nissanfrontier, .mk5, .storyofpagani,.r32img, .dodge, .dailycarimg .bestsportyhybrids{
+.nissanfrontier, .mk5, .storyofpagani,.r32img, .dodge, .dailycarimg .sportyhybrids{
   border: 3px solid;
    padding: 5px 8px; 
      padding: 0px; 
