Update button styles with max-width and height
Add max-width and height properties to button styles.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
      padding: 0px; 
     border-radius: 20px;
     border-color: black;
+    max-width: 100%; 
+    height: auto;
 }
 
 .r32img, .dodge, .dailycarimg{
